# wiki2graph

./: README.md  docker-compose.yaml  paragraphs.ipynb  pyproject.toml  shell.nix
wiki2graph/: import_neo4j.py  parse_wiki.py
