[tool.poetry]
name = "wiki2graph"
version = "0.1.0"
description = ""
authors = ["Tom Stadelmann <tom-010@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pandas = "^2.2.2"
neo4j = "^5.24.0"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"
ipython = "^8.27.0"
jupyter = "^1.1.1"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
